k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flowops-service
  namespace: flowops
  labels:
    app.kubernetes.io/name: flowops
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: flowops
    app.kubernetes.io/component: api
